# hrms_za

./: .gitignore  Evalution of HRMS 16.md  INTEGRATION_MAP.md  PLAN.md  README.md  docker-deployment.md  laravel-to-frappe.md  pyproject.toml  redeploy.sh
docs/superpowers/plans/: 2026-04-20-sa-leave-accrual.md
docs/superpowers/specs/: 2026-04-20-sa-leave-accrual-design.md  2026-04-20-sa-leave-accrual-hr-decisions.md
hrms_za/: hooks.py  modules.txt  patches.txt
hrms_za/patches/v0_0_2/: backfill_sa_leave_policy_assignments.py
hrms_za/payroll_sa/: paye_calculator.py
hrms_za/payroll_sa/dashboard_chart/sa_department_payroll/: sa_department_payroll.json
hrms_za/payroll_sa/dashboard_chart/sa_monthly_payroll_cost/: sa_monthly_payroll_cost.json
hrms_za/payroll_sa/dashboard_chart/sa_statutory_contributions/: sa_statutory_contributions.json
hrms_za/payroll_sa/doctype/sa_leave_settings/: sa_leave_settings.js  sa_leave_settings.json  sa_leave_settings.py
hrms_za/payroll_sa/number_card/sa_missing_tax_numbers/: sa_missing_tax_numbers.json
hrms_za/payroll_sa/number_card/sa_missing_uif_references/: sa_missing_uif_references.json
hrms_za/payroll_sa/number_card/sa_total_paye_month/: sa_total_paye_month.json
hrms_za/payroll_sa/number_card/sa_total_payroll_month/: sa_total_payroll_month.json
hrms_za/payroll_sa/number_card/sa_total_uif_month/: sa_total_uif_month.json
hrms_za/payroll_sa/tests/: test_leave_setup.py  test_paye_calculator.py
hrms_za/payroll_sa/workspace/sa_payroll/: sa_payroll.json
hrms_za/regional/south_africa/: holidays.py  leave.py  setup.py
(+24 files in other folders)
