[project]
name = "hrms_za"
authors = [
    { name = "HostedSIP", email = "claudecode@hostedcomms.co.za" },
]
description = "South African localisation for Frappe HRMS v16"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.bench.frappe-dependencies]
erpnext = "~=16.0.0"
hrms = "~=16.0.0"
